Changed Hero z-index and Set fixed width to BookItemList.

--- a/src/client/styles/components/_bookItemList.scss
+++ b/src/client/styles/components/_bookItemList.scss
@@ -112,7 +112,7 @@
     display: inline-block;
     margin: 0 auto 0 auto;
     padding: 0 0 0 29px;
-    @include calculation(width, '100% - 149px');
+    width: 865px;
   }
 
   &__content {
@@ -124,7 +124,6 @@
 
     @include desktop {
       padding: 12px 0 0 0;
-      width: 865px;
     }
 
     .title-button {
